--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,17 @@ nbactions.xml
 nb-configuration.xml
 .nb-gradle/
 
+
+
+###Poubelle
+nbproject
+._*
+.vagrant
+.~lock.*
+.buildpath
+.DS_Store
+.idea
+.project
+.settings
+/vendor
+composer.phar
